--- a/docs/prerelease/1.3.qmd
+++ b/docs/prerelease/1.3.qmd
@@ -1,10 +1,10 @@
 ---
-title: Quarto 1.3 Pre-release Notes
+title: New In Quarto 1.3
 date: last-modified
 search: false
 ---
 
-## New In Quarto 1.3
+Quarto 1.3 includes a number of bugs fixes as well as the following larger areas of improvement.
 
 -   [Code Annotation](code-annotation.qmd)\
     Use annotation to provide contextual comments to help readers understand code.
