--- a/docs/prerelease/1.3.qmd
+++ b/docs/prerelease/1.3.qmd
@@ -13,10 +13,69 @@ Quarto 1.3 includes a number of bugs fixes as well as the following larger areas
 -   [Embedding Jupyter Notebook Cells](notebooks.qmd)\
     Embed code and outputs from Jupyter Notebooks in Quarto documents.
 -   [PDF Format Improvements](pdf.qmd)\
-    Improved handling for SVG images and remove images in PDF documents.
+    Improved handling for SVG images and remote images in PDF documents.
 -   [Mermaid Diagram Theming](mermaid.qmd)\
     Mermaid diagram's appearance automatically matches your document's theme (or customize it)
 -   [Other Improvements](other.qmd)\
     `kbd` shortcut, Custom AST nodes, and more.
 
 
+
+<!--
+
+1.3 folder
+
+_highlights.qmd
+
+(include that here as well as on the pre-release download page)
+
+- Medium: [Mutli-Format] Publishing
+
+- Large: Jupyter [Cell Embedding]
+
+    - Add tag example
+    - Missing echo=true example
+    - Notebook preview responsive size
+    - Remove 'Other Formats'
+    - Ensure that label => id when rendering ipynb
+    - Notebook views (lead w/ screenshot)
+    - BUG: notebooks.qmd leaves _files dir in preview
+
+- Medium: Article [Grid Customization]
+
+- Medium: [Code] Block [Annotation]
+
+    - Drop docx
+    - Lead with the example (have 2 annotations not 1)
+    - Enable all by default (true, array of enabled, or false, none)
+    - Make the below clickable
+
+- Large: Extensions: [Custom AST Nodes]
+  (some 'Under Construction' notes)
+    - Callout
+    - Conditional
+    - Tabset
+
+- Small: [Mermaid] Diagram [Theming]
+
+- Small: [PDF]: SVG and Remote [Images]
+
+- Small: [`kbd` Shortcode] 
+
+Pipeline:
+
+- Small: Mobile Navigation
+
+- Medium: Asciidoc
+
+- Small: Listings Improvements
+
+- Large: Confluence
+
+
+
+See the <full release notes> for all of the changes.
+
+
+
+-->
