--- a/docs/prerelease/html.qmd
+++ b/docs/prerelease/html.qmd
@@ -4,7 +4,7 @@ title: HTML Document Improvements
 
 ## Multi-Format HTML Output
 
-Starting in Quarto 1.3, HTML pages (either standalone or in a website) can automatically include links to alternative formats for the page (when specified in the document front matter). The additional formats will be automatically placed within the TOC as a new section, if a TOC is enabled for the page. If no TOC is displayed, the additional formats will be displayed in the right margin at the top of the document.
+Starting in Quarto 1.3, HTML pages (either standalone or in a website) automatically include links to other formats specified in the document front matter. The additional formats will be automatically placed within the TOC as a new section, if a TOC is enabled for the page. If no TOC is displayed, the additional formats will be displayed in the right margin at the top of the document.
 
 For example, the following document front matter:
 
@@ -72,17 +72,12 @@ Quarto uses CSS Grid to define the position and size of each of these elements, 
 In Quarto 1.2, the baseline widths of each of these elements was predefined in Quarto and wasn't customizable without replacing the entire CSS grid system used by Quarto. The elements use the following base sizes when calculating the layout of a page:
 
 ::: {style="width: 60%; margin: auto;"}
-+---------------------------------------+------------+
-| Element                               | Size       |
-+=======================================+============+
-| `sidebar-width`{spellcheck="false"}   |   250px    |
-+---------------------------------------+------------+
-| `body-width`{spellcheck="false"}      |   800px    |
-+---------------------------------------+------------+
-| `margin-width`{spellcheck="false"}    |   250px    |
-+---------------------------------------+------------+
-| `gutter-width`{spellcheck="false"}    |   1.5em    |
-+---------------------------------------+------------+
+| Element                             | Size  |
+|-------------------------------------|-------|
+| `sidebar-width`{spellcheck="false"} | 250px |
+| `body-width`{spellcheck="false"}    | 800px |
+| `margin-width`{spellcheck="false"}  | 250px |
+| `gutter-width`{spellcheck="false"}  | 1.5em |
 :::
 
 ### Customization
@@ -116,6 +111,7 @@ $grid-margin-width: 300px !default;
 // The gutter that appears between the above columns
 $grid-column-gutter-width: 1.5rem !default;
 ```
+
 `sidebar-width`, `body-width`, and `margin-width` should be specified in pixels (`px`) as the values will be used when computing other sizes. Requiring pixel sizing is a limitation of our approach to the Quarto's layout, but also typically makes sense since the overall document width is usually tied to the browser size and responive breakpoints rather than font size or other relative measures.
 
 `gutter-width` may be specified in pixels or other units such as `em` or `rem` which are responsive to the document font size.
@@ -124,7 +120,7 @@ $grid-column-gutter-width: 1.5rem !default;
 
 For example, to use the Quarto default sizes for the body and margin, but to create a wider sidebar, you could write:
 
-```yml
+``` yml
 format:
   html: 
     grid:
@@ -132,6 +128,3 @@ format:
 ```
 
 Which would make the sidebar 75 pixels wider than the default Quarto layout. This change would affect all the various grid types (both floating and docked).
-
-
-
