--- a/docs/prerelease/pdf.qmd
+++ b/docs/prerelease/pdf.qmd
@@ -2,10 +2,9 @@
 title: PDF Format Improvements
 ---
 
-
 ## SVG Images
 
-Starting in Quarto 1.3, we support rendering of PDF documents that include SVG files, automatically converting them to PDF images if `rsvg-convert`{spellcheck="false"} is available on the system path during rendering.
+Starting in Quarto 1.3, we support rendering of PDF documents that include SVG files, automatically converting them to PDF images if `rsvg-convert` is available on the system path during rendering.
 
 You can learn more about installing `libsvg`{spellcheck="false"} (which provides `rsvg-convert`{spellcheck="false"}), see <https://wiki.gnome.org/Projects/LibRsvg>. To install on specific platforms, follow the below instructions:
 
@@ -18,4 +17,3 @@ You can learn more about installing `libsvg`{spellcheck="false"} (which provides
 ## Remote Images
 
 Starting in Quarto 1.3, when rendering PDFs, Quarto will automatically fetch remote image references and properly embed them within the PDF.
-
