Restructure pre-release

--- a/docs/prerelease/1.3/index.qmd
+++ b/docs/prerelease/1.3/index.qmd
@@ -1,25 +1,10 @@
 ---
-title: New In Quarto 1.3
+title: Quarto 1.3 Highlights
 date: last-modified
 search: false
 ---
 
-Quarto 1.3 includes a number of bugs fixes as well as the following larger areas of improvement.
-
--   [Code Annotation](code-annotation.qmd)\
-    Use annotation to provide contextual comments to help readers understand code.
--   [HTML Format Improvements](html.qmd)\
-    Automatically include links to alternative formats of HTML pages, customize the width of the layout grid for HTML documents.
--   [Embedding Jupyter Notebook Cells](notebooks.qmd)\
-    Embed code and outputs from Jupyter Notebooks in Quarto documents.
--   [PDF Format Improvements](pdf.qmd)\
-    Improved handling for SVG images and remote images in PDF documents.
--   [Mermaid Diagram Theming](mermaid.qmd)\
-    Mermaid diagram's appearance automatically matches your document's theme (or customize it)
--   [Other Improvements](other.qmd)\
-    `kbd` shortcut, Custom AST nodes, and more.
-
-
+{{< include _highlights.qmd >}}
 
 <!--
 
