--- a/docs/prerelease/1.3/_highlights.qmd
+++ b/docs/prerelease/1.3/_highlights.qmd
@@ -1,14 +1,19 @@
 Quarto 1.3 includes a number of bugs fixes as well as the following highlights.
 
--   [Code Annotation](/docs/prerelease/1.3/code-annotation.qmd)\
-    Use annotation to provide contextual comments to help readers understand code.
--   [HTML Format Improvements](/docs/prerelease/1.3/html.qmd)\
-    Automatically include links to alternative formats of HTML pages, customize the width of the layout grid for HTML documents.
--   [Embedding Jupyter Notebook Cells](/docs/prerelease/1.3/notebooks.qmd)\
+
+-   [Multi-Format Publishing](/docs/prerelease/1.3/multi-format.qmd)
+    Simple discovery of other formats for HTML documents.
+-   [Jupyter Cell Embedding](/docs/prerelease/1.3/embed.qmd)\
     Embed code and outputs from Jupyter Notebooks in Quarto documents.
--   [PDF Format Improvements](/docs/prerelease/1.3/pdf.qmd)\
-    Improved handling for SVG images and remote images in PDF documents.
+-   [Article Grid Customization](/docs/prerelease/1.3/grid.qmd)\
+    Customize the widths within the article grid in HTML documents.
+-   [Code Block Annotation](/docs/prerelease/1.3/code-annotation.qmd)\
+    Use annotation to provide contextual comments to help readers understand code.
+-   [Extensions: Custom AST Nodes](/docs/prerelease/1.3/ast.qmd)\
+    Use custom AST nodes for Quarto types like Callout when writing extensions.
 -   [Mermaid Diagram Theming](/docs/prerelease/1.3/mermaid.qmd)\
     Mermaid diagram's appearance automatically matches your document's theme (or customize it)
--   [Other Improvements](/docs/prerelease/1.3/other.qmd)\
-    `kbd` shortcut, Custom AST nodes, and more.
+-   [PDF: SVG and Remote Images](/docs/prerelease/1.3/pdf.qmd)\
+    Improved handling for SVG images and remote images in PDF documents.
+-   [`kbd` Shortcode](/docs/prerelease/1.3/kbd.qmd)\
+    Show well formatted keyboard shortcuts in Quarto documents.
