--- a/docs/prerelease/1.3/grid.qmd
+++ b/docs/prerelease/1.3/grid.qmd
@@ -1,65 +1,6 @@
 ---
-title: HTML Document Improvements
+title: Article Grid Customization
 ---
-
-## Multi-Format HTML Output
-
-Starting in Quarto 1.3, HTML pages (either standalone or in a website) automatically include links to other formats specified in the document front matter. The additional formats will be automatically placed within the TOC as a new section, if a TOC is enabled for the page. If no TOC is displayed, the additional formats will be displayed in the right margin at the top of the document.
-
-For example, the following document front matter:
-
-``` yaml
-title: Sample Page
-author: Norah Jones
-date: last-modified
-toc: true
-format: 
-  html: default
-  ipynb: default
-```
-
-Now results in an HTML page which includes the additional notebook format as a part of the TOC region:
-
-![](images/other-format.png){.border}
-
-### Other Format Links
-
-Links to additional formats are displayed by default in Quarto HTML documents, but you can control whether they are shown or even which specific formats are included.
-
-You can provide an explicit list of formats to include in the `Other Formats` section by providing a list as the value for `format-links`. For example, this document front matter will display only the link to the Jupyter format of the document, excluding the PDF:
-
-``` yaml
-title: Sample Page
-author: Norah Jones
-date: last-modified
-toc: true
-format: 
-  html: default
-  ipynb: default
-  pdf: default
-format-links: [ipynb]
-```
-
-### Hiding Format Links
-
-To stop the other format links from being shown at all, specify `format-links: false` in your document front matter. For example this front matter will not display the 'Other Formats' links:
-
-``` yaml
-title: Sample Page
-author: Norah Jones
-date: last-modified
-toc: true
-format: 
-  html: default
-  ipynb: default
-format-links: false
-```
-
-::: callout-note
-In a Quarto Project, you can use `_metadata.yml`{spellcheck="false"} to control the behavior for a specific folder. Just include the `format`{spellcheck="false"} and `format-links`{spellcheck="false"} options in a `_metadata.yml`{spellcheck="false"} file to apply the options to all files in a folder. See [Directory Metadata](/docs/projects/quarto-projects.qmd#directory-metadata) for additional details.
-:::
-
-## HTML Grid
 
 ### Background
 
