--- a/docs/prerelease/1.3/index.qmd
+++ b/docs/prerelease/1.3/index.qmd
@@ -6,14 +6,10 @@ search: false
 
 {{< include _highlights.qmd >}}
 
+See the [pre-release download page](/docs/download/prerelease) for a complete list of all the changes.
+
+
 <!--
-
-1.3 folder
-
-_highlights.qmd
-
-(include that here as well as on the pre-release download page)
-
 - Medium: [Mutli-Format] Publishing
 
 - Large: Jupyter [Cell Embedding]
@@ -56,11 +52,5 @@ Pipeline:
 - Small: Listings Improvements
 
 - Large: Confluence
-
-
-
-See the <full release notes> for all of the changes.
-
-
 
 -->
