--- a/docs/prerelease/1.3/kbd.qmd
+++ b/docs/prerelease/1.3/kbd.qmd
@@ -1,15 +1,15 @@
 ---
-title: Other Improvements
+title: "`kbd` Shortcode"
 ---
-
-## `kbd` Shortcode
 
 The `kbd` shortcode can be used to describe keyboard shortcuts in documentation. On Javascript formats, it will attempt to detect the operating system of the format and show the correct shortcut. On print formats, it will print the keyboard shortcut information for all operating systems.
 
-Minimal example:
+For example, writing the following markdown:
 
 ``` md
 To print, press {{{< kbd Shift-Ctrl-P >}}}. To open an existing new project, press {{{< kbd mac=Shift-Command-O win=Shift-Control-O linux=Shift-Ctrl-L >}}}.
 ```
 
-{{< include _custom_ast.qmd >}}
+will render the keyboard shortcuts as:
+
+To print, press {{< kbd Shift-Ctrl-P >}}. To open an existing new project, press {{< kbd mac=Shift-Command-O win=Shift-Control-O linux=Shift-Ctrl-L >}}.
