--- a/docs/prerelease/1.3/multi-format.qmd
+++ b/docs/prerelease/1.3/multi-format.qmd
@@ -1,5 +1,10 @@
 ---
 title: Multi-Format Publishing
+format: 
+  html: default
+  pdf: default
+  ipynb: default
+  docx: default
 ---
 
 ## Overview
